# iot-kit

./: .buildinfo  .gitignore  .gitmodules  LICENSE  README.md  config.yaml  genindex.html  handler.html  handler.py  index.html  lib.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  sensor.html
docs/: conf.py  handler.rst  lib.rst  modules.rst  sensor.rst
docs/_build/: genindex.html  handler.html  index.html  lib.html  modules.html  py-modindex.html  searchindex.js  sensor.html
docs/_build/_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py
lib/: README.md  mail.py  photo_library.py  spread_sheet.py
sensor/: BH1750FVI.py  CO2MINI.py  README.md  SHT31.py  VL6180.py  relay_module.py  web_camera_module.py
