[tool.poetry]
name = "iot-kitchen-garden"
version = "0.2.0"
description = "IoT kitchen garden system for using various sensors and Google Cloud services."
authors = ["Takashi Suzuki <you@example.com>"]
license = ""

[tool.poetry.dependencies]
python = "~=3.7.1"
PyYAML = "^6.0"
schedule = "^1.1.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
oauth2client = "^4.1.3"
gspread = "^5.1.1"
google-api-python-client = "^2.33.0"
smbus2 = "^0.4.1"
opencv-python = "4.1.0.25"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
